--- a/TestCanOpen/.project
+++ b/TestCanOpen/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
 	<name>TestCanOpen</name>
-	<comment />
+	<comment></comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -25,6 +25,10 @@
 		<nature>fr.ac6.mcu.ide.core.MCUProjectNature</nature>
 	</natures>
 	<linkedResources>
-		
+		<link>
+			<name>Src/CanFestival</name>
+			<type>2</type>
+			<locationURI>PROJECT_LOC/CanFestival</locationURI>
+		</link>
 	</linkedResources>
 </projectDescription>
